--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,6 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-#root {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-.loading {
-	display: flex;
-	justify-content: center;
-	font-size: 14px;
-	line-height: 21px;
-	font-family: "Roboto", sans-serif;
-	font-weight: bold;
+.App {
+	width: 100%;
 }
